<resources>
    <string name="app_name">Movie Catalogue Advance</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_popular_movie">Popular Movie</string>
    <string name="text_movie">Movie</string>
    <string name="text_tv_show">TV Show</string>
    <string name="detail_args">App://DetailFragment/%s</string>
    <string name="text_overview">Overview</string>
    <string name="text_information">Information</string>
    <string name="text_credit">Credits</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="text_no_data">No Data Available</string>
    <string name="text_show_backdrop">Show\'s Backdrop</string>
    <string name="text_button_favorite">Button Favorite</string>
</resources>