<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detail.DetailFragment">

    <data>

        <variable
            name="data"
            type="com.andiez.moviecatalogueadvance.core.presenter.model.DetailItem" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:theme="@style/Theme.MovieCatalogueAdvance.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:bindLargePoster="@{data.backdrop}"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/cinema_bg_side"
                    android:contentDescription="@string/text_show_backdrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_gradient" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img_poster"
                    android:layout_width="140dp"
                    android:layout_height="200dp"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    app:bindLargePoster="@{data.img}"
                    app:layout_collapseMode="parallax"
                    app:riv_corner_radius="8dp"
                    tools:src="@drawable/cinema_bg_side" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pb_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/CustomHeadline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{data.title}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="A Story of A Lion: The Lion King" />

                <TextView
                    android:id="@+id/tv_tagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{data.tagline}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text='"A Story of A Lion: The Lion King"' />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="-16dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="false"
                    android:numStars="5"
                    android:rating="@{Float.valueOf(String.valueOf((data.voteAverage/2)))}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote" />

                <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{String.valueOf(data.voteAverage)}"
                    app:layout_constraintStart_toEndOf="@+id/rating_bar"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
                    tools:text="7.8" />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{data.genres}"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote"
                    tools:text="@string/lorem" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="@+id/tv_title" />

                <TextView
                    android:id="@+id/tv_info_title"
                    style="@style/CustomHeadline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/text_information"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="8dp"
                    android:text='@{String.valueOf(data.runtime) + " Minute"}'
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_access_time"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_info_title"
                    tools:text="136 Minute" />

                <TextView
                    android:id="@+id/tv_original_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="8dp"
                    android:text="@{data.originalLanguage}"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_translate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_info_title"
                    tools:text="English" />

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="8dp"
                    android:text="@{data.originalTitle}"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_title"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
                    tools:text="A Story of A Lion: The Lion King" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="8dp"
                    android:text='@{data.status + ", " + data.releaseDate}'
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_calendar_today"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_original_language"
                    tools:text="Released. 27 December 2021" />

                <TextView
                    android:id="@+id/tv_overview_title"
                    style="@style/CustomHeadline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/text_overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{data.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
                    tools:text="@string/lorem" />

                <TextView
                    android:id="@+id/tv_credit_title"
                    style="@style/CustomHeadline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/text_credit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_credit_title"
                    tools:itemCount="1"
                    tools:listitem="@layout/layout_list_cast" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_credit_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="false"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_favorite_border"
            android:contentDescription="@string/text_button_favorite" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>